welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x<- 0 to n-1) {
              ^